# PyNetic

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Outline.md  Philosophy.md  Project Outline.md  README.md  pyproject.toml  test.html  test.js  tox.ini
.github/: CONTRIBUTING.md  pull_request_template.md
.github/actions/line-counter/: Dockerfile  action.yml
.github/actions/line-counter/app/: main.py
.github/stats/: Code Statistics.md
.github/workflows/: lines-of-code.yml  loc.yml
assets/: icon.afdesign
examples/: index.html
examples/component/: a.py  app.py  blue_thing.py  green_thing.py  red_thing.py  sudo.py  test.pug
pynetic/: __init__.py  html.py
pynetic/cli/: cli.py  utils.py
pynetic/core/: __init__.py  application.py  component.py  css.py  html.py  parser.py  reference.py  routing.py  server.py  session.py  styles.py  utils.py  variables.py
pynetic/core/extensions/: __init__.py  css_extensions.py  html_extensions.py
pynetic/server/: dev_server.py  server.py  starlette.py  starlette_server.py
tests/: test_html.py  test_utils.py
