[tool.poetry]
name = "pynetic"
version = "0.1.0"
description = "" # :TODO: Add Description
authors = ["Justin Bacher <92jbach@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jabbey92/pynetic"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
keywords = [
    "UI",
    "framework",
    "http",
    "idom",
    "django",
    "template",
    "templates",
    "templating"
]
packages = [
    {include = "pynetic"},
]

[tool.poetry.dependencies]

# Python Version
python = ">=3.9"

# Required Libraries
multipledispatch = "^0.6.0"
pydantic = "^1.9.1"
starlette = "^0.20.3"
uvicorn = ">=0.18.0"
lxml = "^4.9.1"
cssutils = "^2.5.1"
click = "^8.1.3"

# Documentation
mkdocs = { version = "^1.3.0", optional = true }
mkdocs-material = { version = ">=8.1.4,<9.0.0", optional = true }
cookiecutter = "^2.1.1"
poetry = "^1.1.14"

[tool.poetry.dev-dependencies]

# Developer Dependencies
tox = "^3.18"
pytest = "^7.1"
pytest-mock = "^3.5"
pytest-asyncio = "^0.18.3"
black = {version = "^22.3.0", allow-prereleases = true}

[tool.poetry.extras]

# Documentation
docs = [ "mkdocs", "mkdocs-material" ]

# Testing
test = [ "tox", "pytest", "pytest-mock", "pytest-asyncio" ]

# pytest
[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
